--- a/app/src/main/res/layout-land/tv_activity_login.xml
+++ b/app/src/main/res/layout-land/tv_activity_login.xml
@@ -237,6 +237,7 @@
                             android:id="@+id/pket_import_confirm_pwd"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:layout_marginTop="@dimen/d16"
                             bcaas:hint="@string/please_enter_password_again"
                             bcaas:hintColor="@color/white30_f1f1f1"
                             bcaas:showLine="false"
