「发送」页面添加显示「输入密码」

--- a/app/src/main/res/layout-land/tv_activity_login.xml
+++ b/app/src/main/res/layout-land/tv_activity_login.xml
@@ -55,10 +55,9 @@
                     android:id="@+id/btn_unlock_wallet"
                     style="@style/tv_button_style"
                     android:layout_alignParentBottom="true"
+                    android:layout_centerHorizontal="true"
                     android:layout_gravity="center"
                     android:layout_marginBottom="@dimen/d18"
-                    android:layout_marginLeft="@dimen/d46"
-                    android:layout_marginRight="@dimen/d46"
                     android:layout_marginTop="@dimen/d18"
                     android:focusable="true"
                     android:focusableInTouchMode="true"
@@ -163,10 +162,9 @@
                     android:id="@+id/btn_create_wallet"
                     style="@style/tv_button_style"
                     android:layout_alignParentBottom="true"
+                    android:layout_centerHorizontal="true"
                     android:layout_gravity="center"
                     android:layout_marginBottom="@dimen/d18"
-                    android:layout_marginLeft="@dimen/d46"
-                    android:layout_marginRight="@dimen/d46"
                     android:layout_marginTop="@dimen/d18"
                     android:clickable="true"
                     android:focusable="true"
@@ -257,13 +255,13 @@
                     android:id="@+id/btn_import_wallet"
                     style="@style/tv_button_style"
                     android:layout_alignParentBottom="true"
+                    android:layout_centerHorizontal="true"
                     android:layout_marginBottom="@dimen/d18"
-                    android:layout_marginLeft="@dimen/d46"
-                    android:layout_marginRight="@dimen/d46"
                     android:layout_marginTop="@dimen/d20"
                     android:clickable="true"
                     android:focusable="true"
                     android:focusableInTouchMode="true"
+                    android:gravity="center"
                     android:text="@string/import_wallet" />
             </RelativeLayout>
         </LinearLayout>
