--- a/app/src/main/res/layout-land/tv_activity_send.xml
+++ b/app/src/main/res/layout-land/tv_activity_send.xml
@@ -63,68 +63,132 @@
                     android:gravity="center"
                     android:orientation="vertical">
 
-                    <LinearLayout
+                    <RelativeLayout
                         style="@style/tv_layout_style"
                         android:layout_width="match_parent"
                         android:layout_height="@dimen/d0"
                         android:layout_weight="1"
                         android:gravity="center_vertical"
-                        android:orientation="vertical"
                         android:padding="@dimen/d24">
 
-
-                        <TextView
-                            style="@style/tv_white_16_text_style"
-                            android:layout_marginTop="@dimen/d24"
-                            android:text="@string/receive_account" />
-
-                        <EditText
-                            android:id="@+id/et_input_destination_address"
-                            style="@style/tv_white_16_text_style"
+                        <LinearLayout
+                            android:id="@+id/ll_set_transaction_info"
                             android:layout_width="match_parent"
-                            android:layout_height="@dimen/d35"
-                            android:layout_centerVertical="true"
-                            android:layout_marginBottom="@dimen/d16"
-                            android:layout_marginTop="@dimen/d8"
-                            android:layout_toLeftOf="@+id/ib_scan_address"
-                            android:background="@color/transparent"
-                            android:cursorVisible="true"
-                            android:digits="@string/private_format"
-                            android:hint="@string/please_enter_receive_account"
-                            android:inputType="textMultiLine"
-                            android:lineSpacingExtra="@dimen/d3"
-                            android:maxLines="2"
-                            android:textColorHint="@color/white"
-                            android:textCursorDrawable="@drawable/edit_text_cursor_drawable" />
+                            android:layout_height="match_parent"
+                            android:layout_above="@+id/btn_send"
+                            android:gravity="center_vertical"
+                            android:orientation="vertical">
 
-                        <TextView
-                            style="@style/tv_white_16_text_style"
-                            android:text="@string/transaction_amount" />
+                            <TextView
+                                style="@style/tv_white_16_text_style"
+                                android:layout_marginTop="@dimen/d24"
+                                android:text="@string/receive_account" />
 
-                        <EditText
-                            android:id="@+id/et_transaction_amount"
-                            style="@style/tv_orange_18_text_style"
-                            android:layout_below="@+id/tv_transaction_amount_key"
-                            android:layout_centerVertical="true"
-                            android:layout_marginBottom="@dimen/d16"
-                            android:layout_marginTop="@dimen/d8"
-                            android:layout_toLeftOf="@+id/ib_scan_address"
-                            android:cursorVisible="true"
-                            android:digits="@string/amount_edit_digits"
-                            android:hint="@string/please_enter_transaction_amount"
-                            android:inputType="numberDecimal"
-                            android:singleLine="true" />
+                            <EditText
+                                android:id="@+id/et_input_destination_address"
+                                style="@style/tv_white_16_text_style"
+                                android:layout_width="match_parent"
+                                android:layout_height="@dimen/d35"
+                                android:layout_centerVertical="true"
+                                android:layout_marginBottom="@dimen/d16"
+                                android:layout_marginTop="@dimen/d8"
+                                android:layout_toLeftOf="@+id/ib_scan_address"
+                                android:background="@color/transparent"
+                                android:cursorVisible="true"
+                                android:digits="@string/private_format"
+                                android:hint="@string/please_enter_receive_account"
+                                android:inputType="textMultiLine"
+                                android:lineSpacingExtra="@dimen/d3"
+                                android:maxLines="2"
+                                android:textColorHint="@color/white"
+                                android:textCursorDrawable="@drawable/edit_text_cursor_drawable" />
+
+                            <TextView
+                                style="@style/tv_white_16_text_style"
+                                android:text="@string/transaction_amount" />
+
+                            <EditText
+                                android:id="@+id/et_transaction_amount"
+                                style="@style/tv_orange_18_text_style"
+                                android:layout_below="@+id/tv_transaction_amount_key"
+                                android:layout_centerVertical="true"
+                                android:layout_marginBottom="@dimen/d16"
+                                android:layout_marginTop="@dimen/d8"
+                                android:layout_toLeftOf="@+id/ib_scan_address"
+                                android:cursorVisible="true"
+                                android:digits="@string/amount_edit_digits"
+                                android:hint="@string/please_enter_transaction_amount"
+                                android:inputType="numberDecimal"
+                                android:singleLine="true" />
+
+
+                        </LinearLayout>
+
+                        <!--「發送」確認密碼頁面-->
+                        <LinearLayout
+                            android:id="@+id/ll_send_info"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_above="@+id/btn_send"
+                            android:gravity="center_vertical"
+                            android:orientation="vertical"
+                            android:visibility="gone">
+
+                            <TextView
+                                android:id="@+id/tv_transaction_detail"
+                                style="@style/tv_orange_24_text_style"
+                                android:layout_gravity="center_horizontal"
+                                android:layout_marginTop="@dimen/d10"
+                                tools:text="28928.0000000 BCC" />
+
+                            <View
+                                android:layout_width="match_parent"
+                                android:layout_height="@dimen/d0.5"
+                                android:layout_marginTop="@dimen/d10"
+                                android:background="@color/white30_f1f1f1" />
+
+
+                            <TextView
+                                android:id="@+id/tv_receive_account_key"
+                                style="@style/tv_white_15_text_style"
+                                android:layout_gravity="center_vertical"
+                                android:layout_marginTop="@dimen/d10"
+                                android:text="@string/receive_account" />
+
+                            <TextView
+                                android:id="@+id/tv_destination_wallet"
+                                style="@style/tv_white70_13_text_style"
+                                android:layout_marginTop="@dimen/d10"
+                                android:maxLines="2" />
+
+                            <View
+                                style="@style/tv_line_style"
+                                android:layout_marginTop="@dimen/d10" />
+
+                            <TextView
+                                style="@style/tv_white_15_text_style"
+                                android:layout_marginTop="@dimen/d10"
+                                android:text="@string/password" />
+
+                            <include
+                                layout="@layout/tv_include_edit_text_password"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content" />
+
+                        </LinearLayout>
 
                         <Button
                             android:id="@+id/btn_send"
                             style="@style/tv_button_style"
-                            android:layout_marginTop="@dimen/d10"
+                            android:layout_alignParentBottom="true"
+                            android:layout_centerHorizontal="true"
                             android:clickable="true"
                             android:focusable="true"
                             android:focusableInTouchMode="true"
+                            android:gravity="center"
                             android:text="@string/send" />
 
-                    </LinearLayout>
+                    </RelativeLayout>
 
                     <TextView
                         style="@style/tv_white_20_text_style"
