--- a/app/src/main/res/layout-land/tv_activity_setting.xml
+++ b/app/src/main/res/layout-land/tv_activity_setting.xml
@@ -139,15 +139,11 @@
 
                     <EditText
                         android:id="@+id/et_input_representatives"
-                        style="@style/tv_white_18_text_style"
-                        android:layout_width="match_parent"
-                        android:layout_height="@dimen/d35"
+                        style="@style/tv_login_edit_text_style"
                         android:layout_below="@+id/tv_title"
                         android:layout_centerVertical="true"
                         android:layout_marginBottom="@dimen/d16"
                         android:layout_marginTop="@dimen/d16"
-                        android:background="@color/transparent"
-                        android:cursorVisible="true"
                         android:digits="@string/private_format"
                         android:hint="@string/enter_address_of_the_authorized" />
 
@@ -155,6 +151,7 @@
                     <Button
                         android:id="@+id/btn_sure"
                         style="@style/tv_button_style"
+                        android:layout_centerHorizontal="true"
                         android:layout_below="@+id/et_input_representatives"
                         android:layout_marginTop="@dimen/d10"
                         android:text="@string/confirm" />
