--- a/app/src/main/res/layout-land/tv_activity_login.xml
+++ b/app/src/main/res/layout-land/tv_activity_login.xml
@@ -245,6 +245,7 @@
 
                         <TextView
                             android:id="@+id/tv_password_rule"
+                            android:layout_marginTop="@dimen/d10"
                             style="@style/tv_orange_9_text_style"
                             android:text="@string/remember_password" />
                     </LinearLayout>
