--- a/app/src/main/res/layout-land/tv_item_pop_currency_list.xml
+++ b/app/src/main/res/layout-land/tv_item_pop_currency_list.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/rl_tv_show_currency"
     android:layout_width="match_parent"
     android:layout_height="@dimen/d40"
     android:layout_gravity="center"
+    android:clickable="true"
     android:focusable="true"
-    android:id="@+id/rl_tv_show_currency"
     android:focusableInTouchMode="true">
 
     <TextView
@@ -13,7 +14,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:ellipsize="middle"
         android:gravity="center" />
 
     <View
