--- a/app/src/main/res/layout/item_language_switch.xml
+++ b/app/src/main/res/layout/item_language_switch.xml
@@ -13,7 +13,7 @@
         android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"
         android:layout_marginBottom="@dimen/d10"
-        android:layout_marginLeft="@dimen/d22"
+        android:paddingLeft="@dimen/d22"
         android:layout_marginTop="@dimen/d10"
         android:background="@color/transparent"
         android:clickable="true"
@@ -32,6 +32,7 @@
         android:background="@mipmap/icon_choose" />
 
     <View
+        android:id="@+id/v_line"
         style="@style/line_style"
         android:layout_alignParentBottom="true" />
 
