手机替换白色背景卡片

--- a/app/src/main/res/layout/activity_check_wallet_info.xml
+++ b/app/src/main/res/layout/activity_check_wallet_info.xml
@@ -115,6 +115,7 @@
             style="@style/bg_white_style"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/d2"
             android:orientation="vertical">
 
             <TextView
@@ -140,7 +141,8 @@
             style="@style/bg_white_style"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/d20"
+            android:layout_marginTop="@dimen/d2"
+            android:layout_marginBottom="@dimen/d2"
             android:orientation="vertical">
 
 
