--- a/app/src/main/res/layout/activity_check_wallet_info.xml
+++ b/app/src/main/res/layout/activity_check_wallet_info.xml
@@ -24,24 +24,22 @@
                 android:layout_marginTop="@dimen/d20"
                 android:text="@string/my_account_address" />
 
-            <ImageView
-                android:id="@+id/iv_copy"
+            <ImageButton
+                android:id="@+id/ib_copy"
                 android:layout_width="@dimen/d32"
-                android:layout_height="@dimen/d48"
+                android:layout_height="match_parent"
                 android:layout_alignBottom="@+id/tv_address_key"
                 android:layout_alignParentRight="true"
                 android:layout_alignTop="@+id/tv_address_key"
                 android:background="@color/transparent"
                 android:paddingLeft="@dimen/d12"
-                android:paddingTop="@dimen/d2"
                 android:src="@mipmap/icon_copy" />
 
             <TextView
                 android:id="@+id/tv_account_address_value"
                 style="@style/black70_14_single_text_style"
-                android:layout_marginLeft="@dimen/d18"
                 android:layout_marginTop="@dimen/d20"
-                android:layout_toLeftOf="@+id/iv_copy"
+                android:layout_toLeftOf="@+id/ib_copy"
                 android:layout_toRightOf="@+id/tv_address_key"
                 android:gravity="center_vertical|right" />
 
