--- a/app/src/main/res/layout/fragment_send.xml
+++ b/app/src/main/res/layout/fragment_send.xml
@@ -107,7 +107,7 @@
 
                         <View
                             android:id="@+id/v_vertical_line"
-                            android:layout_width="@dimen/d1"
+                            android:layout_width="@dimen/d0.5"
                             android:layout_height="match_parent"
                             android:layout_gravity="center_vertical"
                             android:background="@color/black20_1d2124" />
@@ -118,7 +118,7 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
                             android:layout_weight="1"
-                            android:gravity="center"
+                            android:gravity="center_vertical|right"
                             android:orientation="vertical">
 
                             <TextView
