调整二维码

--- a/app/src/main/res/layout/activity_modify_authorized_presentatives.xml
+++ b/app/src/main/res/layout/activity_modify_authorized_presentatives.xml
@@ -52,7 +52,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/tv_title"
-            android:layout_marginBottom="@dimen/d20"
             android:gravity="bottom">
 
             <EditText
@@ -60,6 +59,8 @@
                 style="@style/black30_14_edit_text_style"
                 android:digits="@string/private_format"
                 android:layout_toLeftOf="@+id/ib_scan_representative"
+                android:gravity="center_vertical"
+                android:layout_marginBottom="@dimen/d20"
                 android:hint="@string/enter_address_of_the_authorized" />
 
             <ImageButton
