--- a/app/src/main/res/layout-land/tv_activity_main.xml
+++ b/app/src/main/res/layout-land/tv_activity_main.xml
@@ -21,16 +21,13 @@
             android:id="@+id/tv_current_time"
             style="@style/tv_white_18_text_style" />
 
-        <Button
-            android:id="@+id/btn_login"
-            android:layout_width="wrap_content"
-            android:layout_height="@dimen/d30"
+        <io.bcaas.view.TVTextView
+            android:id="@+id/tv_login"
+            style="@style/tv_white_24_text_style"
             android:layout_alignParentRight="true"
-            android:background="@color/transparent"
-            android:minWidth="@dimen/d80"
-            android:nextFocusDown="@+id/btn_scan"
-            android:nextFocusLeft="@+id/cv_home"
-            android:nextFocusRight="@+id/cv_setting"
+            android:clickable="true"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
             android:text="@string/login" />
 
         <ImageButton
